test/modules/lydia/inFunc.chpl
module OuterModule {
  module M {
    proc uhoh() {
      module realBad {
      }
    }
  }

  uhoh();
}
